<?xml version="1.0"?>
<package format="3">
  <name>open3d_slam_lua_io</name>
  <version>0.0.0</version>
  <description>Range sensor based mapping</description>

  <maintainer email="jelavice@ethz.ch">Edo Jelavic</maintainer>
  <license>BSD</license> <!-- Change this to your actual license! -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>open3d_slam</depend>
  <depend>lua_parameter_dictionary</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
